--- a/Front_end/index.html
+++ b/Front_end/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="" class="logo">
+            <img src="logo2.PNG" class="logo">
             <ul>
-                <li><a href="#"><a href="index.html">Startpagina</a></li>
-                <li><a href="#"><a href="profiel.html">Profiel</a></li>
-                <li><a href="#"><a href="zoeken.html">Zoeken</a></li>
-                <li><a href="#"><a href="overons.html">Over ons</a></li>
+                <li> <img src="home (1).png" width="5%"> <a href="#"><a style="color: #833FB9;" href="index.html">Startpagina</a></li>
+                <li> <img src="user (1).png" width="5%"> <a href="#"><a style="color: #7BCAC5;" href="profiel.html">Profiel</a></li>
+                <li> <img src="search.png" width="5%"> <a href="#"><a style="color: #3BC8DB;" href="zoeken.html">Zoeken</a></li>
+                <li> <img src="info.png" width="5%"> <a href="#"><a style="color: #3BC8DB;" href="overons.html">Over ons</a></li>
             </ul>
         </div>
     </div>
