--- a/Front_end/zoeken.html
+++ b/Front_end/zoeken.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StreetSnap</title>
+    <link rel="stylesheet"href="zoeken.css">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="" class="logo">
+            <img src="logo2.PNG" class="logo">
             <ul>
-                <li><a href="#"><a href="index.html">Startpagina</a></li>
-                <li><a href="#"><a href="profiel.html">Profiel</a></li>
-                <li><a href="#"><a href="zoeken.html">Zoeken</a></li>
-                <li><a href="#"><a href="overons.html">Over ons</a></li>
+                <li> <img src="home (1).png" width="5%"> <a href="#"><a style="color: #833FB9;" href="index.html">Startpagina</a></li>
+                <li> <img src="user (1).png" width="5%"> <a href="#"><a style="color: #7BCAC5;" href="profiel.html">Profiel</a></li>
+                <li> <img src="search.png" width="5%"> <a href="#"><a style="color: #3BC8DB;" href="zoeken.html">Zoeken</a></li>
+                <li> <img src="info.png" width="5%"> <a href="#"><a style="color: #3BC8DB;" href="overons.html">Over ons</a></li>
             </ul>
         </div>
     </div>
