eindresultaat front end

--- a/Front_end/index.html
+++ b/Front_end/index.html
@@ -19,5 +19,15 @@
             </ul>
         </div>
     </div>
+    <div class="upload">
+        <input type="file" id="image_input" accept="image/png, image/jpg">
+
+        <div id="display_image"></div>
+
+        <script src="script.js"></script>
+    </div>
+    <!-- <form method="post">
+        <input type="file" name="image" >
+    </form> -->
 </body>
 </html>
